--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,8 @@ jobs:
     # install & build golang files
     - name: Setup Go environment
       uses: actions/setup-go@v3.2.0
+      with:
+        go-version: '^1.18.3'
     - run: go get
     - run: go build -o bin/main
       
