--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Setup Go environment
       uses: actions/setup-go@v3.2.0
       with:
-        go-version: '^1.18.3'
+        go-version: '18'
     - run: go get
     - run: go build -o bin/main
       
