--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,9 +22,10 @@ jobs:
     
     # install & build golang files
     - name: Setup Go environment
-      uses: actions/setup-go@v3.2.0
+      uses: actions/setup-go@v3
       with:
-        go-version: '18'
+        go-version: 1.*
+        check-latest: true
     - run: go get
     - run: go build -o bin/main
       
