--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,10 +22,9 @@ jobs:
     
     # install & build golang files
     - name: Setup Go environment
-      uses: actions/setup-go@v3
+      uses: actions/setup-go@v3.2.0
       with:
-        go-version: 1.*
-        check-latest: true
+        go-version: '>=1.18.0-rc.1'
     - run: go get
     - run: go build -o bin/main
       
