--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,7 @@ jobs:
       uses: actions/setup-go@v3.2.0
       with:
         go-version: '18'
+        check-latest: true
     - run: go get
     - run: go build -o bin/main
       
