--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,10 +21,11 @@ jobs:
 #     - run: npm ci
     
     # install & build golang files
-    - name: Setup Go environment
-      uses: actions/setup-go@v3
-      with:
-        check-latest: true
+    - name: Setup Go
+      uses: actions/setup-go@v3.2.0
+      with: 
+        go-version: "^1.18.3"
+    - run: go version
     - run: go get
     - run: go build -o bin/main
       
