--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,9 +23,11 @@ jobs:
     - run: go version
     - run: go get
 
-  test:
-    needs: prepare
+  testing:
     name: test
+    runs-on: ubuntu-latest
+    needs: prepare
+    steps:
     - name: Generate coverage report
       run: go test  ./... -covermode=atomic -coverprofile=coverage.txt
     - name: Upload coverage report
@@ -34,9 +36,11 @@ jobs:
         token: ${{ secrets.CODECOV_TOKEN }}
 
   deploy:
-    needs: [prepare, test]
-    - name: Deploy
-      uses: actions/setup-go@v3.2.0
+    needs: [prepare, testing]
+    name: Deploy
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/setup-go@v3.2.0
       with: 
         go-version: "^1.18.3"
     - run: env GOOS=linux go build -ldflags="-s -w" -o bin/main main.go
