--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,14 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     # install nodejs dependencies
+    - name: Cache
+      uses: actions/cache@v3.0.4
+      with:
+        path: |
+          node_modules
+          ~/go/pkg/mod
+        key: ${{ runner.os }}-deploy
+        
     - name: Setup Node.js environment
       uses: actions/setup-node@v3.3.0
     - run: npm ci
