--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,23 +11,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    # install nodejs dependencies
     - name: Cache
       uses: actions/cache@v3.0.4
       with:
         path: |
-          ./
+          ~/.npm
           ~/go/pkg/mod
         key: ${{ runner.os }}-deploy
-        
+    # install nodejs dependencies      
     - name: Setup Node.js environment
       uses: actions/setup-node@v3.3.0
-    - run: npm ci
     # install & build golang files
     - name: Setup Go
       uses: actions/setup-go@v3.2.0
       with: 
         go-version: "^1.18.3"
+        cache: true
     - run: go version
     - run: go get
 
@@ -36,6 +35,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: prepare
     steps:
+    - uses: actions/checkout@v3
     - name: Generate coverage report
       run: go test  ./... -covermode=atomic -coverprofile=coverage.txt
     - name: Upload coverage report
@@ -48,6 +48,13 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     steps:
+    - name: Cache
+      uses: actions/cache@v3.0.4
+      with:
+        path: |
+          ~/.npm
+          ~/go/pkg/mod
+        key: ${{ runner.os }}-deploy
     - uses: actions/setup-go@v3.2.0
       with: 
         go-version: "^1.18.3"
