--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,18 +6,31 @@ on:
       - master
 
 jobs:
-  prepare:
-    name: prepare
+  testing:
+    name: test
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - name: Cache
-      uses: actions/cache@v3.0.4
+    # install & build golang files
+    - name: Setup Go
+      uses: actions/setup-go@v3.2.0
+      with: 
+        go-version: "^1.18.3"
+        cache: true
+    - run: go get
+    - name: Generate coverage report
+      run: go test  ./... -covermode=atomic -coverprofile=coverage.txt
+    - name: Upload coverage report
+      uses: codecov/codecov-action@v2
       with:
-        path: |
-          ~/.npm
-          ~/go/pkg/mod
-        key: ${{ runner.os }}-deploy
+        token: ${{ secrets.CODECOV_TOKEN }}
+
+  deploy:
+    needs: [testing]
+    name: Deploy
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
     # install nodejs dependencies      
     - name: Setup Node.js environment
       uses: actions/setup-node@v3.3.0
@@ -27,34 +40,7 @@ jobs:
       with: 
         go-version: "^1.18.3"
         cache: true
-    - run: go version
     - run: go get
-
-  testing:
-    name: test
-    runs-on: ubuntu-latest
-    needs: prepare
-    steps:
-    - uses: actions/checkout@v3
-    - name: Generate coverage report
-      run: go test  ./... -covermode=atomic -coverprofile=coverage.txt
-    - name: Upload coverage report
-      uses: codecov/codecov-action@v2
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
-
-  deploy:
-    needs: [prepare, testing]
-    name: Deploy
-    runs-on: ubuntu-latest
-    steps:
-    - name: Cache
-      uses: actions/cache@v3.0.4
-      with:
-        path: |
-          ~/.npm
-          ~/go/pkg/mod
-        key: ${{ runner.os }}-deploy
     - uses: actions/setup-go@v3.2.0
       with: 
         go-version: "^1.18.3"
