--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,7 @@ jobs:
     # install nodejs dependencies      
     - name: Setup Node.js environment
       uses: actions/setup-node@v3.3.0
+    - run: npm ci
     # install & build golang files
     - name: Setup Go
       uses: actions/setup-go@v3.2.0
