filter the same events

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,11 @@ on:
   push:
     branches:
       - master
+    paths-ignore:
+      - '.github/**'
+      - '**.md'
+      - '**.gitignore'
+      - '**.eslintrc.js'
 
 jobs:
   testing:
